[LFC] The initial containing block does not necessarily have in-flow content. https://bugs.webkit.org/show_bug.cgi?id=207833 <rdar://problem/59500650>

Reviewed by Antti Koivisto.

Source/WebCore:

Test: fast/layoutformattingcontext/html-is-absolute-positioned.html

When the <html> is out-of-flow positioned, the initial containing block has no in-flow direct children.

* layout/LayoutContext.cpp:
(WebCore::Layout::LayoutContext::layoutFormattingContextSubtree):

LayoutTests:

* fast/layoutformattingcontext/html-is-absolute-positioned-expected.html: Added.
* fast/layoutformattingcontext/html-is-absolute-positioned.html: Added.


Canonical link: https://commits.webkit.org/220800@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256732 268f45cc-cd09-0410-ab3c-d52691b4dbfc